opam-version: "1.2"
name: "json_decoder"
version: "0.1"
maintainer: "peter.degroff@gmail.com"
authors: [ "peter.degroff@gmail.com" ]
license: "BSD-3-clause"
homepage: "http://github.com/dagoof/ocaml_json_decoder"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune" {build}
  "alcotest" {test}
  "result"
  "yojson"
]

available: [ ocaml-version >= "4.02.3" ]
